--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,9 @@ nav ul {
 
 nav li {
     margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav a {
@@ -40,6 +43,7 @@ nav a {
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s;
+    text-align: center;
 }
 
 nav a:hover {
@@ -72,7 +76,8 @@ label {
 
 /* Input and Dropdown Styles */
 input,
-select {
+select,
+textarea {
     width: calc(100% - 20px);
     padding: 10px;
     border-radius: 4px;
